--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://kit.fontawesome.com/c0a01584c9.js" crossorigin="anonymous"></script>
   </body>
 </html>
